# yburn

./: .gitignore  COMPETITIVE-RESEARCH.md  CONTRIBUTING.md  LICENSE  M10-RESULTS.md  README.md  SECURITY.md  pyproject.toml  sample-crons.json  security.txt
.yburn-sandbox/reports/: 2026-03-30-21-33.md
.yburn-sandbox/scripts/: -yburn--daily-cron-health-report.py  -yburn--nightly-backup---git-commit.py  -yburn--nightly-system-diagnostic.py  -yburn--weekly-cron-health-audit.py  db-maintenance---daily-full.py  db-maintenance---midday-guard.py  db-maintenance-weekly.py  github-pat-expiry-reminder.py  oauth-token-health-check.py  stuck-session-cleanup.py
docs/: pre-launch-review-prompts.md  security-audit-2026-03-30.md
docs/tapes/: audit.tape  health.tape  watch.tape
tests/: test_channels.py  test_classifier.py  test_cli.py  test_converter.py  test_replacer.py  test_reporter.py  test_scanner.py  test_telegram.py  test_yburn_health.py  test_yburn_watch.py
yburn/: __init__.py  classifier.py  cli.py  config.py  converter.py  replacer.py  reporter.py  scanner.py
yburn/channels/: __init__.py  discord.py  slack.py  telegram.py
yburn/flagship/: README.md  __init__.py  yburn_health.py  yburn_watch.py
yburn/templates/: TEMPLATE_SPEC.md
yburn/templates/api-endpoint-check/: manifest.json  script.py
yburn/templates/cron-health-report/: example-output.txt  manifest.json  script.py
yburn/templates/db-maintenance-status/: README.md  manifest.json  script.py
yburn/templates/file-watcher/: manifest.json  script.py
yburn/templates/git-backup-status/: manifest.json  script.py
yburn/templates/log-scanner/: README.md  manifest.json  script.py
yburn/templates/oauth-health-check/: README.md  manifest.json  script.py
yburn/templates/session-cleanup/: README.md  example-output.txt  manifest.json  script.py
yburn/templates/ssl-cert-expiry/: README.md  manifest.json  script.py
yburn/templates/system-diagnostics/: example-output.txt  manifest.json  script.py
